# DevOps3

./: .Makefile.am.swo  .Makefile.am.swp  Dockerfile  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  arctan.cpp  arctan.h  arctan_approx  arctan_test  config.status  configure  configure.ac  deb.deb  http_server  main.cpp  scriptA.sh  scriptB.sh  test.cpp  test_server.cpp
.deps/: arctan.Po  test.Po  test_server-test_server.Po
.github/workflows/: action.yml  test_compile.yml
autom4te.cache/: output.1  output.2  requests  traces.1
deb/DEBIAN/: control
